[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/svtvliemeter/assets/truth.png" type="Texture" id=1]
[ext_resource path="res://addons/svtvliemeter/LieMeter.gd" type="Script" id=2]
[ext_resource path="res://addons/svtvliemeter/Example.gd" type="Script" id=3]

[node name="Example" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.32549, 0.286275, 0.231373, 1 )

[node name="LieMeter" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -489.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
script = ExtResource( 2 )

[node name="Controls" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 187.0

[node name="Label" type="Label" parent="Controls"]
margin_right = 187.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
custom_colors/font_color = Color( 0.988235, 0.796078, 0.388235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Select lie level:"
align = 1
valign = 1

[node name="LieLevel" type="Label" parent="Controls"]
margin_top = 52.0
margin_right = 187.0
margin_bottom = 66.0
custom_colors/font_color = Color( 0.698039, 0.698039, 0.698039, 1 )
text = "0"
align = 1
valign = 1

[node name="LieLevelSelector" type="VSlider" parent="Controls"]
modulate = Color( 0.988235, 0.796078, 0.388235, 1 )
margin_top = 70.0
margin_right = 187.0
margin_bottom = 428.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 5.0
rounded = true
tick_count = 6
ticks_on_borders = true

[node name="IsDelusion" type="CheckBox" parent="Controls"]
margin_top = 432.0
margin_right = 187.0
margin_bottom = 480.0
rect_min_size = Vector2( 0, 48 )
custom_colors/font_color = Color( 0.988235, 0.796078, 0.388235, 1 )
text = "Delusion"

[connection signal="value_changed" from="Controls/LieLevelSelector" to="." method="_on_LieLevelSelector_value_changed"]
[connection signal="toggled" from="Controls/IsDelusion" to="." method="_on_IsDelusion_toggled"]
